Updating about me page

--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Sakshi Vij, Enthusiastic Programmer</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Sakshi Vij!</h1>
-				<p>I'm best known as the degugger and enthusiastic programmer among my friends!<a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="">email</a></li>
-        		<li><a href="">github.com/sakshivij21</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+<head>
+<title>ME!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">About Me</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Technical Skills</a></li>
+      <li><a href="#">Education</a></li>
+      <li><a href="#">My Hobbies</a></li>
+    </ul>
+  </div>
+</nav>
+   
+  <h1> HI FOLKS! I AM STILL WORKING ON THIS PAGE....</h1>
+  <h2>Hope to be done with it soon.....</h2>
+  
+  </body>
+</html>
